# python-conjecture

./: CHANGELOG.md  LICENSE  Makefile  README.md  conftest.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: release-please.yml  tests.yaml
src/conjecture/: __init__.py  base.py  general.py  mapping.py  object.py  rich.py  sized.py  string.py
tests/: __init__.py  conftest.py  test_all_of.py  test_all_of_conjecture.py  test_any_of.py  test_any_of_conjecture.py  test_anything.py  test_conjecture.py  test_empty.py  test_equal_to.py  test_greater_than.py  test_greater_than_or_equal_to.py  test_has.py  test_instance_of.py  test_length_of.py  test_less_than.py  test_less_than_or_greater_than.py  test_none.py  test_prefixed_with.py  test_suffixed_with.py
tests/unit/: __init__.py  test_all_of.py  test_all_of_conjecture.py  test_any_of.py  test_any_of_conjecture.py  test_anything.py  test_conjecture.py  test_empty.py  test_equal_to.py  test_greater_than.py  test_greater_than_or_equal_to.py  test_has.py  test_has_attribute.py  test_has_key.py  test_instance_of.py  test_length_of.py  test_less_than.py  test_less_than_or_greater_than.py  test_none.py  test_prefixed_with.py  test_suffixed_with.py
