[tool.poetry]
name = "conjecture"
version = "0.0.1"
description = "A pythonic assertion library"
authors = ["Daniel Knell <contact@danielknell.co.uk>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
