[tool.poetry]
name = "conjecture"
version = "0.0.3"
description = "A pythonic assertion library"
authors = ["Daniel Knell <contact@danielknell.co.uk>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/artisanofcode/python-conjecture"

classifiers = [
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Testing",
    "Topic :: Utilities"
]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^21.5b0"
pylint = "^2.8.2"
mypy = "^0.812"
isort = "^5.8.0"
hypothesis = "^6.12.0"
pydocstyle = "^6.0.0"
pytest-testdox = "^2.0.1"
pytest-cov = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.pylint.messages_control]
disable = "C0330, C0326"

[tool.pylint.format]
max-line-length = "88"

[tool.pylint.SIMILARITIES]
ignore-imports = "yes"

[tool.coverage.run]
source=["src/conjecture"]